# investment-analytics

./: README.md  main.py  pyproject.toml  requirements.txt
app/: constants.py  main.py
app/pages/: history.py  realtime.py  top.py
src/: main.py
src/investment_analytics/components/: charts.py  colors.py  history_chart.html  styles.py
src/investment_analytics/models/: ticker.py  tickers.json
src/investment_analytics/pages/: history.py  realtime.py  top.py
src/investment_analytics/services/: analysis.py  market_data.py  realtime_state.py
